# rag-mini-enterprise-knowledge-platform

./: .gitignore  README.md  main.py  pyproject.toml
api_service/src/api/: main.py
api_service/src/api/api/routes/: health.py  rag.py
api_service/src/api/schemas/: health.py  rag.py
frontend/: streamlit_app.py
inngest_functions/: __init__.py  client.py  env.py  ingest_pdf.py  ingest_pdf_start_span.py  ingest_pdf_upsert.py  query_pdf.py  query_pdf_llm.py  query_pdf_search.py  query_pdf_tracing.py
inngest_functions/ingest_pdf/: __init__.py  ingest_pdf.py  ingest_pdf_finalize_failure.py  ingest_pdf_load.py  ingest_pdf_start_span.py  ingest_pdf_upsert.py
inngest_functions/query_pdf/: __init__.py  query_pdf.py  query_pdf_finalize_failure.py  query_pdf_llm.py  query_pdf_parse_inputs.py  query_pdf_search.py  query_pdf_start_span.py
rag_types/: __init__.py  models.py
services/: __init__.py  embeddings.py  langfuse_client.py  openai_api_key.py  pdf_loader.py  query_retrieval.py  rag_query_service.py  reranker.py  sparse_embeddings.py  vector_store.py
tests/: test_api_service.py  test_embeddings.py  test_rag_types.py  test_vector_store.py
