[project]
name = "rag-enterprise-knowledge-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "fastapi>=0.128.8",
    "httpx>=0.28.1",
    "inngest",
    "langfuse>=3.7.0",
    "llama-index-core",
    "llama-index-readers-file",
    "openai",
    "pydantic-settings>=2.11.0",
    "python-dotenv",
    "qdrant-client",
    "sentence-transformers>=5.1.2",
    "streamlit",
    "uvicorn",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.2",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.15.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
